--- a/Config/tmux.conf
+++ b/Config/tmux.conf
@@ -2,6 +2,8 @@
     set -g base-index 1
     setw -g pane-base-index 1
     set -g default-terminal screen-256color
+    set -g history-limit 100000
+    set -g mode-keys vi
 # set Ctrl-a as the default prefix key combination
     # and unbind C-b to free it up
     set -g prefix C-a
@@ -10,10 +12,33 @@
     bind | split-window -h
     bind - split-window -v
 # map Vi movement keys as pane movement keys
-    bind h select-pane -L
-    bind j select-pane -D
-    bind k select-pane -U
-    bind l select-pane -R
+    bind        h select-pane -L
+    bind        j select-pane -D
+    bind        k select-pane -U
+    bind        l select-pane -R
+    bind        J       resize-pane -D 5
+    bind        K       resize-pane -U 5
+    bind        H       resize-pane -L 5
+    bind        L       resize-pane -R 5
+    bind r      source-file ~/.tmux.conf
+    bind m      swap-pane -D 
+
+    bind y      copy-mode -e
+    bind P      paste-buffer 
+
+    bind-key -t vi-copy 'v' begin-selection
+    bind-key -t vi-copy 'y' copy-selection
+    bind-key -t vi-copy 'r' rectangle-toggle
+
+    bind-key -t vi-copy y copy-pipe "xclip -selection clipboard > /dev/null"
+    bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
+
+    bind -n M-Tab switch-client -Ep
+    bind -n M-Down    resize-pane -D 10
+    bind -n M-UP      resize-pane -U 10
+    bind -n M-Left    resize-pane -L 10
+    bind -n M-Right   resize-pane -R 10
+    
 #map space and n 
     unbind " "
     bind " " next-window
