--- a/Config/tmux.conf
+++ b/Config/tmux.conf
@@ -34,6 +34,7 @@
     bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 
     bind -n M-Tab switch-client -Ep
+    bind -n M-\       next-window
     bind -n M-Down    resize-pane -D 10
     bind -n M-UP      resize-pane -U 10
     bind -n M-Left    resize-pane -L 10
