--- a/Config/tmux.conf
+++ b/Config/tmux.conf
@@ -33,8 +33,8 @@
     bind-key -t vi-copy y copy-pipe "xclip -selection clipboard > /dev/null"
     bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 
-    bind -n M-Tab switch-client -Ep
-    bind -n M-\       next-window
+    bind -n M-\ switch-client -Ep
+    bind -n M-Tab       next-window
     bind -n M-Down    resize-pane -D 10
     bind -n M-UP      resize-pane -U 10
     bind -n M-Left    resize-pane -L 10
