Update dwm conf and added a patch for status color, kernel conf support Docker

--- a/Config/dwm/Makefile
+++ b/Config/dwm/Makefile
@@ -2,6 +2,8 @@ CC=gcc
 CFLAGS=-O2 -s -lX11 -lasound
 BAR=barDwm
 FILE=barM.c
+NATIVE=native_status.c
+NATB=native_bar
 
 all: bar mv
 
@@ -9,5 +11,7 @@ bar: ~/Git/Gentoo/Config/dwm/barM.c
 	$(CC)  -o $(BAR) $(FILE) $(CFLAGS)
 mv:
 	mv $(BAR) ~/.dwm/barDwm
+native: $(NATIVE)
+	$(CC) -o  $(NATB) $(NATIVE) $(CFLAGS)
 
 
