Update some config and tmux with ssh

--- a/Config/tmux_new.conf
+++ b/Config/tmux_new.conf
@@ -117,6 +117,10 @@ set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour117,bold] #H #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+
+if-shell "if [ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]; then false ; else true; fi" \
+'set -g status-right "#[fg=colour233,bg=colour226,bold] SSH #[fg=colour233,bg=colour117,bold] #H #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S "';
+
 set -g status-right-length 50
 set -g status-left-length 20
 
