--- a/Config/tmux.conf
+++ b/Config/tmux.conf
@@ -26,11 +26,10 @@
     bind y      copy-mode -e
     bind P      paste-buffer 
 
-    bind-key -t vi-copy 'v' begin-selection
-    bind-key -t vi-copy 'y' copy-selection
-    bind-key -t vi-copy 'r' rectangle-toggle
+    bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+#    bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 
-    bind-key -t vi-copy y copy-pipe "xclip -selection clipboard > /dev/null"
+    bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
     bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 
     bind -n M-\ switch-client -Ep
@@ -44,46 +43,53 @@
     unbind " "
     bind " " next-window
 # ----------------------
-    # set some pretty colors
-    # ----------------------
-    # set pane colors - hilight the active pane
-    set-option -g pane-border-fg colour235 #base02
-    set-option -g pane-active-border-fg colour240 #base01
+#### COLOUR (Solarized dark)
 
-    # colorize messages in the command line
-    set-option -g message-bg black #base02
-    set-option -g message-fg brightred #orange
-# ----------------------
-    # Status Bar
-    # -----------------------
-    set-option -g status on                # turn the status bar on
-    set -g status-interval 5               # set update frequencey (default 15 seconds)
-    set -g status-justify centre           # center window list for clarity
-    # set-option -g status-position top    # position the status bar at top of screen
+# default statusbar colors
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
 
-    # visual notification of activity in other windows
-    setw -g monitor-activity on
-    set -g visual-activity on
+# default window title colors
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
 
-    # set color for status bar
-    set-option -g status-bg colour235 #base02
-    set-option -g status-fg yellow #yellow
-    set-option -g status-attr dim 
+# active window title colors
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
 
-    # set window list colors - red for active and cyan for inactive
-    set-window-option -g window-status-fg brightblue #base0
-    set-window-option -g window-status-bg colour236 
-    set-window-option -g window-status-attr dim
+# pane border
+set-option -g pane-border-fg black #base02
+set-option -g pane-active-border-fg brightgreen #base01
 
-    set-window-option -g window-status-current-fg brightred #orange
-    set-window-option -g window-status-current-bg colour236 
-    set-window-option -g window-status-current-attr bright
+# message text
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
 
-    # show host name and IP address on left side of status bar
-    set -g status-left-length 70
-    set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
 
-    # show session name, window & pane number, date and time on right side of
-    # status bar
-    set -g status-right-length 60
-    set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $5}')::"
+# clock
+set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+
+# colours for the active window
+set-window-option -g window-status-current-format "#[fg=black, bg=colour194]#[fg=black, bg=colour194] #I #W #[fg=colour194, bg=black]"
+# colours for the non active window
+set-window-option -g window-status-format "#[fg=colour7, bg=black] #I #W "
+# center the windows status 
+set -g status-justify centre
+set-window-option -g window-status-separator ""
+
+set -g status-left-length 70
+set -g status-left "#[fg=black, bg=green]⮀#[fg=black, bg=green] #h #[fg=green, bg=colour9]⮀ #[fg=black, bg=colour9]#(curl icanhazip.com) #[fg=colour9, bg=black]⮀"
+
+
+set -g status-right-length 60
+set -g status-right "#[fg=blue, bg=black]#[fg=colour231, bg=blue]#S #I:#P#[fg=yellow, bg=blue]#[fg=black, bg=yellow] %d %b %Y #[fg=black, bg=yellow]"
+
