tmux: update configuration

--- a/Config/tmux_new.conf
+++ b/Config/tmux_new.conf
@@ -9,8 +9,8 @@
     set -g prefix C-a
     unbind C-b
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
-    bind | split-window -h
-    bind - split-window -v
+    bind | split-window -c '#{pane_current_path}' -h
+    bind - split-window -c '#{pane_current_path}' -v
 # map Vi movement keys as pane movement keys
     bind        h select-pane -L
     bind        j select-pane -D
@@ -21,10 +21,11 @@
     bind        H       resize-pane -L 5
     bind        L       resize-pane -R 5
     bind r      source-file ~/.tmux.conf
-    bind m      swap-pane -D 
+    bind m      swap-pane -D
 
     bind y      copy-mode -e
-    bind P      paste-buffer 
+    bind P      paste-buffer
+    bind C      command-prompt -I "new-session -s "
 
     bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 #    bind-key -Tcopy-mode-vi 'y' send -X copy-selection
@@ -32,18 +33,17 @@
     bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
     bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 
-    bind -n M-\ switch-client -Ep
-    bind -n M-Tab       next-window
+    bind -n M-` switch-client -Ep
+    bind -n M-e splitw -v -p 25 -c '#{pane_current_path}' '/bin/zsh'
+    bind -n M-Tab     last-window
     bind -n M-Down    resize-pane -D 10
     bind -n M-UP      resize-pane -U 10
     bind -n M-Left    resize-pane -L 10
     bind -n M-Right   resize-pane -R 10
-    
-#map space and n 
+
+#map space and n
     unbind " "
     bind " " next-window
-# ----------------------
-#### COLOUR (Solarized dark)
 
 ######################
 ### DESIGN CHANGES ###
@@ -118,7 +118,7 @@ set -g status-attr dim
 set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour117,bold] #H #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 
-if-shell "if [ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]; then true ; else false; fi" \
+if-shell "if [ "$SSH_CLIENT" ] || [ "$SSH_TTY" ]; then true ; else false; fi" \
 'set -g status-right "#[fg=colour233,bg=colour226,bold] SSH #[fg=colour233,bg=colour117,bold] #H #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S "';
 
 set -g status-right-length 50
